# cyberlinux

./: .dockerignore  .gemspec  .gitignore  .solargraph.yml  .travis.yml  :w  CHANGELOG.md  Chromebook.md  Dockerfile  Gemfile  LICENSE  LICENSE-MIT  README.md  Rakefile  build.sh  reduce  reduce.rb  spec.yml  test.rb
.githooks/: commit-msg  pre-commit  util.sh
apriori/: README.md  base.yml  containers.md  containers.yml  k8snode.md  personal-celes.yml  personal.md  personal.yml  reduce  standard.md
apriori/packer/: packer.json
art/: face.xcf  screenfetch.ascii  splash_1280x1024.xcf  terminal_800x600.xcf
aur/arch-install-scripts/: PKGBUILD  umount.patch
aur/asterisk/: PKGBUILD  asterisk.install
aur/bindip/: PKGBUILD  bindip.c
aur/ccextractor/: PKGBUILD
aur/chromium/: PKGBUILD  README.md  chroma.rb
aur/cyberlinux-config/: PKGBUILD  desktop.install
aur/cyberlinux-grub/: PKGBUILD
aur/cyberlinux-grub-themes/: PKGBUILD
aur/cyberlinux-keyring/: PKGBUILD  cyberlinux-keyring.install  cyberlinux.gpg
aur/cyberlinux-plank/: PKGBUILD  cyberlinux.patch  defaults.patch  ordering.patch
aur/cyberlinux-screenfetch/: PKGBUILD  cyberlinux.patch
aur/cyberlinux-vim-plugins/: PKGBUILD
aur/cyberlinux-xkeyboard-config/: PKGBUILD  README.md  celes.patch
aur/delve/: PKGBUILD
aur/freeswitch/: PKGBUILD  addprefix.py  freeswitch.install  freeswitch.service  freeswitch.xml  vars.xml
aur/helm/: PKGBUILD
aur/iksemel/: PKGBUILD
aur/kubernetes/: PKGBUILD  kubeadm.install
aur/libblockdev/: PKGBUILD
aur/linux-celes/: PKGBUILD  README.md  config
aur/linux-chrome/: PKGBUILD  config
aur/makemkv/: PKGBUILD
aur/mkinitcpio-vt-colors/: PKGBUILD  usage.install  vt-colors.conf
aur/openvpn-pia/: PKGBUILD  override.conf
aur/packer/: PKGBUILD
aur/powerline-gitstatus/: PKGBUILD
aur/qopenvpn-pia/: PKGBUILD  override.conf  qopenvpn-pia.install
aur/ruby-amatch/: PKGBUILD
aur/ruby-byebug/: PKGBUILD
aur/ruby-cmds/: PKGBUILD
aur/ruby-coderay/: PKGBUILD
aur/ruby-filesize/: PKGBUILD
cli/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  rustfmt.toml
cli/cmd/reduce/: args.go  build.go  build_test.go  clean.go  clean_test.go  logs.go  opts.go  reduce.go  reduce_test.go  version.go
cli/errors/: Cargo.toml
cli/errors/src/: error.rs
cli/internal/arch/: arch.go
cli/internal/arch/abs/: abs.go  abs_test.go
cli/internal/arch/aur/: aur.go  aur_test.go  model.go  opts.go
cli/internal/arch/model/: model.go
cli/internal/arch/pkgbuild/: lexer.go  lexer_test.go  parser.go
cli/internal/aur/: aur.go  aur_test.go  model.go
cli/internal/reduce/: build.go  build_test.go  clean.go  fake.go  info.go  info_test.go  keys.go  opts.go  profile.go  reduce.go  reduce_test.go
cli/internal/shlex/: lexer.go  lexer_test.go  parser.go
cli/internal/smac/: smac.go
cli/laconic/: Cargo.toml
cli/laconic/src/: lib.rs
cli/reduce/: Cargo.toml
cli/reduce/src/: core.rs  keys.rs  lib.rs  model.rs  opts.rs
cli/src/: core.rs  lib.rs  main.rs  model.rs  opts.rs
cli/sys/: Cargo.toml
cli/test/: base.yml
cli/tests/: base.yml
config/: .vimrc  mkinitcpio.conf  pacman.conf_1_for_caching  pacman.conf_2_for_builder  pacman.conf_3_for_layers
docs/: CHANGELOG.md  CYBERLINUX_REPO.md  Distros.md  Flatpak.md  README.md  WINE.md  Wine.md  cyberlinux.md
initramfs/: installer.conf  mkinitcpio.conf
installer/: README.md  installer  installer.conf  mkinitcpio.conf
lib/: :  change.rb  cmds.rb  config.rb  core.rb  edit.rb  erb.rb  fedit.rb  sys.rb
packer/: Vagrantfile  packer.json  packer.sh  virtualbox.sh
profiles/: README.md  _base.yml  base.yml  cont-apache.yml  containers.md  containers.yml  k8s-node.yml  k8snode.md  k8snode.yml  kubernetes.md  kubernetes.yml  old-standard.yml  personal-celes.md  personal-celes.yml  personal.md  personal.yml  standard.md  standard.yml  test.yml
specs/: :w  _base.yml  _build.yml  base.yml  build.yml  changes.yml  configs.yml  container.yml  containers.yml  machine.yml  machines.yml  packages.yml  personal-celes.yml  personal.yml  standard.yml
test/: test.rb  test_change.rb  test_config.rb  test_core.rb  test_edit.rb  test_erb.rb  test_fedit.rb  test_get_deployment_yml.rb  test_get_deployments.rb  test_getapps.rb  test_getimages.rb  test_installapps.rb  test_load_profiles.rb  test_reduce.rb  test_sys.rb
(+460 files in other folders)
