[package]
name = "reduce-cli"
version = "0.3.2"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "CLI for cyberlinux"
readme = "README.md"
homepage = "https://github.com/phR0ze/cyberlinux/cli"
repository = "https://github.com/phR0ze/cyberlinux/cli"
keywords = ["cyberlinux", "cli"]
categories = ["command-line-utilities"]

[workspace]
members = ["reduce"]

# [[bin]]
# name = "reduce"
# path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
clap = "2.33"
# reduce = { path = "reduce" }
