[package]
name = "reduce-cli"
version = "0.3.13"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "CLI for cyberlinux"
readme = "README.md"
homepage = "https://github.com/phR0ze/cyberlinux/cli"
repository = "https://github.com/phR0ze/cyberlinux/cli"
keywords = ["cyberlinux", "cli"]
categories = ["command-line-utilities"]

[workspace]
members = ["reduce"]

[profile.release]
lto = true

[[bin]]
name = "reduce"
path = "src/main.rs"

[dependencies]
clap = "2.33"
reduce = { path = "reduce" }

[dependencies.fungus]
features = ["_libc_", "_crypto_"]

[patch.crates-io]
fungus = { path = "../../fungus" }
