[package]
name = "reduce"
version = "0.3.15"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "CLI for cyberlinux"
readme = "README.md"
homepage = "https://github.com/phR0ze/cyberlinux/cli/reduce"
repository = "https://github.com/phR0ze/cyberlinux/cli/reduce"
keywords = ["cyberlinux", "cli"]
categories = ["command-line-utilities"]

[dependencies]
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dependencies.fungus]
features = ["_libc_", "_crypto_"]